Fix digit overflow and cut off
- Handle number overflow with hidden scrollbar
- Add an inner span to display to properly retain padding on overflow
- Resize the calculator to fit 14 digits without cut off

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ main {
 }
 
 .calculator {
-  width: 400px;
-  height: 570px;
+  width: 390px;
+  height: 550px;
   padding: 36px;
   border: 1px solid black;
   border-radius: 16px;
@@ -37,6 +37,11 @@ main {
   background-color: #B3B7C0;
   display: flex;
   justify-content: flex-end;
+}
+
+#display-text {
+  overflow-x: auto;
+  scrollbar-width: none;
 }
 
 .button-row {
